Fix styling issue with slider dots on browser page hide slider dots on browser page on mobile screens

--- a/src/components/ArtGallery.css
+++ b/src/components/ArtGallery.css
@@ -103,6 +103,10 @@
     margin: 0 auto;
 }
 
+.slick-list {
+    margin-bottom: 2rem;
+}
+
 @media (max-width: 768px) {
     
     .explorer-title {
@@ -116,13 +120,7 @@
     }
 
     .slick-dots {
-        position: absolute;
-        bottom: -70px; /* Adjust the distance from the bottom as needed */
-        width: 100%;
-        list-style: none;
-        text-align: center;
-        padding: 0;
-        margin: 0;
+        display: none !important;
     }
 
     .slick-prev {
